--- a/frontend/src/features/market-list/market-list.component.html
+++ b/frontend/src/features/market-list/market-list.component.html
@@ -1,3 +1,6 @@
-
-<app-grid-bot></app-grid-bot>
-  
+<div class = "market-list">
+    <app-grid-bot></app-grid-bot>
+    <app-chips></app-chips>
+    <app-sidebar></app-sidebar>
+    <app-search-bar></app-search-bar>
+</div>
