--- a/frontend/src/app/shared/components/grid-bot/grid-bot.component.scss
+++ b/frontend/src/app/shared/components/grid-bot/grid-bot.component.scss
@@ -1,11 +1,8 @@
 .grid-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Establece 2 columnas de igual tamaño */
-  gap: 16px; /* Ajusta el espacio entre las celdas */
-  padding: 16px; /* Ajusta el padding del contenedor */
-}
-
-.bot-card {
-  width: 100%; /* Asegura que cada carta ocupe todo el espacio disponible dentro de su celda */
-  max-width: 100%; /* Garantiza que la carta no se extienda más allá de su celda */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 1rem;
+    padding: 1rem;
+    margin-left: 300px; 
+    margin-top: 150px;   
 }
