epic/bots-interface update market-list component

--- a/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -26,15 +26,19 @@
 
         <!-- Versión expandida -->
         <li class="sidenav-item" *ngIf="!isCollapsed">
+            <h2 class="sidenav-title">Perfil</h2>
             <img src="person.svg" alt="Personas">
         </li>
         <li class="sidenav-item" *ngIf="!isCollapsed">
+            <h2 class="sidenav-title">Worflows</h2>
             <img src="share.svg" alt="Compartir">
         </li>
         <li class="sidenav-item" *ngIf="!isCollapsed">
+            <h2 class="sidenav-title">Favoritos</h2>
             <img src="star_filled.svg" alt="Favoritos">
         </li>
         <li class="sidenav-item" *ngIf="!isCollapsed">
+            <h2 class="sidenav-title">Subir Worflows</h2>
             <img src="upload.svg" alt="Compartidos">
         </li>
     </ul>
