--- a/frontend/src/app/shared/components/bot-card/bot-card.component.scss
+++ b/frontend/src/app/shared/components/bot-card/bot-card.component.scss
@@ -195,3 +195,8 @@
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     }
   }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ajusta la imagen manteniendo la proporción */
+  }
