--- a/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,45 +1,74 @@
 <div class="sidenav" [class.expanded]="!isCollapsed">
+    <!-- Botón para colapsar/expandir -->
     <div class="logo-container">
-        <button class="logo" (click)="toggleSidebar()">
-            <img src="list.svg" alt="Menu" [class.rotated]="!isCollapsed">
-        </button>
+      <button class="logo" (click)="toggleSidebar()" aria-label="Toggle sidebar">
+        <img 
+          src="list.svg" 
+          alt="Menu" 
+          [class.rotated]="!isCollapsed"
+        >
+      </button>
     </div>
+  
+    <!-- Contenido expandible (opcional) -->
     <div class="sidebar-expandable">
-        <div class="expandable-content">
-            <ng-content select="[sidebar-content]"></ng-content>
-        </div>
+      <div class="expandable-content">
+        <ng-content select="[sidebar-content]"></ng-content>
+      </div>
     </div>
+  
+    <!-- Iconos de plataformas -->
     <ul class="sidenav-nav">
-        <!-- Versión contraída -->
-        <li class="sidenav-discord" *ngIf="isCollapsed">
-            <img src="discord.svg" alt="Discord">
-        </li>
-        <li class="sidenav-item" *ngIf="isCollapsed">
-            <img src="github.svg" alt="GitHub">
-        </li>
-        <li class="sidenav-item" *ngIf="isCollapsed">
-            <img src="slack.svg" alt="Slack">
-        </li>
-        <li class="sidenav-item" *ngIf="isCollapsed">
-            <img src="teams.svg" alt="Teams">
-        </li>
-
-        <!-- Versión expandida -->
-        <li class="sidenav-item" *ngIf="!isCollapsed">
-            <h2 class="sidenav-title">Perfil</h2>
-            <img src="person.svg" alt="Personas">
-        </li>
-        <li class="sidenav-item" *ngIf="!isCollapsed">
-            <h2 class="sidenav-title">Worflows</h2>
-            <img src="share.svg" alt="Compartir">
-        </li>
-        <li class="sidenav-item" *ngIf="!isCollapsed">
-            <h2 class="sidenav-title">Favoritos</h2>
-            <img src="star_filled.svg" alt="Favoritos">
-        </li>
-        <li class="sidenav-item" *ngIf="!isCollapsed">
-            <h2 class="sidenav-title">Subir Worflows</h2>
-            <img src="upload.svg" alt="Compartidos">
-        </li>
+      <!-- Versión colapsada (solo iconos) -->
+      <li class="sidenav-discord" *ngIf="isCollapsed">
+        <img 
+          src="discord.svg" 
+          alt="Discord" 
+          [class.active]="activePlatform === 'discord'"
+          (click)="selectPlatform('discord')"
+        >
+      </li>
+      <li class="sidenav-item" *ngIf="isCollapsed">
+        <img 
+          src="github.svg" 
+          alt="GitHub"
+          [class.active]="activePlatform === 'github'"
+          (click)="selectPlatform('github')"
+        >
+      </li>
+      <li class="sidenav-item" *ngIf="isCollapsed">
+        <img 
+          src="slack.svg" 
+          alt="Slack"
+          [class.active]="activePlatform === 'slack'"
+          (click)="selectPlatform('slack')"
+        >
+      </li>
+      <li class="sidenav-item" *ngIf="isCollapsed">
+        <img 
+          src="teams.svg" 
+          alt="Teams"
+          [class.active]="activePlatform === 'teams'"
+          (click)="selectPlatform('teams')"
+        >
+      </li>
+  
+      <!-- Versión expandida (iconos + texto) -->
+      <li class="sidenav-item" *ngIf="!isCollapsed">
+        <h2 class="sidenav-title">Perfil</h2>
+        <img src="person.svg" alt="Personas">
+      </li>
+      <li class="sidenav-item" *ngIf="!isCollapsed">
+        <h2 class="sidenav-title">Workflows</h2>
+        <img src="share.svg" alt="Compartir">
+      </li>
+      <li class="sidenav-item" *ngIf="!isCollapsed">
+        <h2 class="sidenav-title">Favoritos</h2>
+        <img src="star_filled.svg" alt="Favoritos">
+      </li>
+      <li class="sidenav-item" *ngIf="!isCollapsed">
+        <h2 class="sidenav-title">Subir Workflows</h2>
+        <img src="upload.svg" alt="Subir">
+      </li>
     </ul>
-</div>
+  </div>
