--- a/frontend/src/features/market-list/market-list.component.html
+++ b/frontend/src/features/market-list/market-list.component.html
@@ -16,6 +16,7 @@
     <app-grid-bot 
       [filterPlatform]="currentPlatform"
       [searchQuery]="searchQuery">
+      [isLoggedIn]="isLoggedIn">
     </app-grid-bot>
   </div>
 </div>
