epic/worklows create user-profile view

--- a/frontend/src/app/shared/components/login-form/login-form.component.html
+++ b/frontend/src/app/shared/components/login-form/login-form.component.html
@@ -37,6 +37,8 @@
       LOG IN
     </button>
   </form>
-
+  <div class="register-link">
+    <p>Don't have an account? <a routerLink="/auth/register">Sign up</a></p>
+  </div>
 
 </div>
