--- a/frontend/src/app/shared/components/register-form/register-form.component.scss
+++ b/frontend/src/app/shared/components/register-form/register-form.component.scss
@@ -41,7 +41,7 @@ input {
 }
 
 .register-btn {
-  background: #e57373;
+  background: #64c46f;
   color: black;
   font-weight: bold;
   padding: 10px;
@@ -52,7 +52,7 @@ input {
 }
 
 .register-btn:hover {
-  background: #ef9a9a;
+  background: #9de899;
 }
 
 p {
@@ -61,7 +61,7 @@ p {
 }
 
 a {
-  color: #e57373;
+  color: #738ce5;
   text-decoration: none;
 }
 
