--- a/frontend/src/app/shared/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/shared/components/search-bar/search-bar.component.html
@@ -11,4 +11,10 @@
       <img src="search.svg" alt="Buscar" class="search-icon">
     </button>
   </div>
+  
+  <!-- Icono de usuario posicionado absolutamente -->
+  <div class="user-icon" (click)="handleUserClick()">
+    <img src="botverse.svg" alt="Usuario">
+    <span class="tooltip">{{ tooltipText }}</span>
+  </div>
 </div>
