--- a/frontend/src/app/shared/components/register-form/register-form.component.html
+++ b/frontend/src/app/shared/components/register-form/register-form.component.html
@@ -65,5 +65,7 @@
     </button>
   </form>
 
-  <p class="login-link">Already have an account? <a routerLink="/auth/login">Log in</a></p>
+  <p class="login-link">Already have an account? 
+    <a (click)="navigateToLogin()" style="cursor: pointer;">Log in</a>
+  </p>
 </div>
